@@ -3,11 +3,6 @@
 
 <translation-status>
   <release name="gnome-1.4">
-    <group name="core">
-      <description>FIXME: Add a good description</description>
-      <essential/>
-      <frozen/>
-    </group>
     <group name="fifth-toe">
       <description>FIXME: Add a good description</description>
       <frozen/>
