@@ -1,3 +1,8 @@
+2003-10-04  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Removed 1.4 core section. It's not
+	used anyway.
+
 2003-10-03  Carlos Perelló Marín <carlos@gnome.org>
 
 	* translation-status.xml: Removed gedit-plugins from gnome-2.4, I
